--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="center">
-        <img id="logo" src="images/jaimelogo@2x copy.png" alt="J'aime Logo" width="600">
+        <img id="logo" src="jaimelogo@2xcopy.png" alt="J'aime Logo" width="600">
         <h1>Welcome!</h1>
         <h2>Energize. Imagine. Explore.</h2>
         <p>A creative space to fuel, connect, relax, and enjoy.</p>
